--- a/ing.yml
+++ b/ing.yml
@@ -18,6 +18,13 @@ spec:
             name: dotnet-service
             port:
               number: 80
+      - path: /php
+        pathType: Prefix
+        backend:
+          service:
+            name: php-app-service
+            port:
+              number: 80
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
