--- a/dotnet.yml
+++ b/dotnet.yml
@@ -18,10 +18,10 @@ spec:
           ports:
             - containerPort: 80
           env:
-            - name: DB_SOURCE
-              value: "mysql-service"
+            - name: DB_HOST
+              value: "mysqlflexserverunique.mysql.database.azure.com"
             - name: DB_USER
-              value: "root"
+              value: "mysqladmin"
             - name: DB_PASSWORD
               value: "AdminPassword123!"
             - name: DB_DATABASE
