--- a/php.yml
+++ b/php.yml
@@ -21,9 +21,9 @@ spec:
             - containerPort: 80
           env:
             - name: DB_HOST
-              value: "mysql-service"
+              value: "mysqlflexserverunique.mysql.database.azure.com"
             - name: DB_USER
-              value: "root"
+              value: "mysqladmin"
             - name: DB_PASSWORD
               value: "AdminPassword123!"
             - name: DB_NAME
