--- a/ing.yml
+++ b/ing.yml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: dotnet-ingress
+  name: application
   namespace: default
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
@@ -23,6 +23,13 @@ spec:
         backend:
           service:
             name: php-app-service
+            port:
+              number: 80
+      - path: /Angular
+        pathType: Prefix
+        backend:
+          service:
+            name: angular-service
             port:
               number: 80
 ---
