--- a/dotnet.yml
+++ b/dotnet.yml
@@ -18,7 +18,7 @@ spec:
           ports:
             - containerPort: 80
           env:
-            - name: DB_HOST
+            - name: DB_SOURCE
               value: "mysqlflexserverunique.mysql.database.azure.com"
             - name: DB_USER
               value: "mysqladmin"
