--- a/dotnet.yml
+++ b/dotnet.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: dotnetapp
-          image: devteam1009/dotnetapp:1.0
+          image: malekkkk/dotnet:9.8
           ports:
             - containerPort: 80
           env:
