--- a/ingress.yaml
+++ b/ingress.yaml
@@ -1,7 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: demo-ingress
+  name: grafana-ingress
+  namespace: loki
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -9,17 +10,10 @@ spec:
   rules:
   - http:
       paths:
-      - path: /grafana
+      - path: /
         pathType: Prefix
         backend:
           service:
-            name: prometheus-grafana
-            port:
-              number: 3000
-      - path: /dotnet
-        pathType: Prefix
-        backend:
-          service:
-            name: dotnet-service
+            name: prometheus-grafana    
             port:
               number: 80
