--- a/ing.yml
+++ b/ing.yml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
-  ingressClassName: azure-application-gateway
+  ingressClassName: nginx
   rules:
   - http:
       paths:
